// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataFilter children 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c12 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c13:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus >circle,
.c13:focus >ellipse,
.c13:focus >line,
.c13:focus >path,
.c13:focus >polygon,
.c13:focus >polyline,
.c13:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c13:focus ::-moz-focus-inner {
  border: 0;
}

.c13:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible) >circle,
.c13:focus:not(:focus-visible) >ellipse,
.c13:focus:not(:focus-visible) >line,
.c13:focus:not(:focus-visible) >path,
.c13:focus:not(:focus-visible) >polygon,
.c13:focus:not(:focus-visible) >polyline,
.c13:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c13:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c14 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c9::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c9::-moz-placeholder {
  color: #AAAAAA;
}

.c9:-ms-input-placeholder {
  color: #AAAAAA;
}

.c9 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c9::-moz-focus-inner {
  border: none;
  outline: none;
}

.c9:-moz-placeholder,
.c9::-moz-placeholder {
  opacity: 1;
}

.c8 {
  position: relative;
  width: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
              >
                name
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8"
                >
                  <input
                    autocomplete="off"
                    class="c9"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c10"
        >
          <button
            class="c11"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c12"
          />
          <button
            aria-hidden="true"
            class="c13 c14"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter noForm 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  flex-wrap: wrap;
  column-gap: 12px;
  row-gap: 12px;
}

.c9 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c11 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c19 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c3 {
  max-width: 100%;
}

.c5 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c5 :hover input:not([disabled])+div,
.c5 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c7 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c7 :checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c6 {
  flex-shrink: 0;
}

.c13 {
  user-select: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c14 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    column-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <form
        class="c3"
      >
        <div
          class="c4 StyledCheckBoxGroup-sc-2nhc5d-0"
          id="data-name"
          role="group"
        >
          <label
            class="c5"
            label="aa"
          >
            <div
              class="c4 c6"
            >
              <input
                class="c7"
                type="checkbox"
              />
              <div
                class="c8 "
              />
            </div>
            <span>
              aa
            </span>
          </label>
          <div
            class="c9"
          />
          <label
            class="c5"
            label="bb"
          >
            <div
              class="c4 c6"
            >
              <input
                class="c7"
                type="checkbox"
              />
              <div
                class="c8 "
              />
            </div>
            <span>
              bb
            </span>
          </label>
          <div
            class="c9"
          />
          <label
            class="c5"
            label="cc"
          >
            <div
              class="c4 c6"
            >
              <input
                class="c7"
                type="checkbox"
              />
              <div
                class="c8 "
              />
            </div>
            <span>
              cc
            </span>
          </label>
        </div>
      </form>
      <form
        class="c3"
      >
        <div
          class="c4 StyledCheckBoxGroup-sc-2nhc5d-0"
          id="data-enabled"
          role="group"
        >
          <label
            class="c5"
            label="true"
          >
            <div
              class="c4 c6"
            >
              <input
                class="c7"
                type="checkbox"
              />
              <div
                class="c8 "
              />
            </div>
            <span>
              true
            </span>
          </label>
          <div
            class="c9"
          />
          <label
            class="c5"
            label="false"
          >
            <div
              class="c4 c6"
            >
              <input
                class="c7"
                type="checkbox"
              />
              <div
                class="c8 "
              />
            </div>
            <span>
              false
            </span>
          </label>
        </div>
      </form>
      <form
        class="c3"
      >
        <div
          class="c10"
          id="data-rating"
        >
          <span
            class="c11"
            style="width: 0px;"
          >
            2.0999999999999996
          </span>
          <div
            class="c12 c13"
            tabindex="-1"
          >
            <div
              class="c14"
              style="flex: 0 0 0px;"
            />
            <div
              class="c15"
              style="flex: 0 0 1px;"
            >
              <div
                aria-label="Lower Bounds"
                aria-valuemax="4.8999999999999995"
                aria-valuemin="2.0999999999999996"
                aria-valuenow="2.0999999999999996"
                class="c16"
                role="slider"
                style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                tabindex="0"
              >
                <div
                  class="c17 EdgeControl__StyledBox-sc-1xo2yt9-0"
                />
              </div>
            </div>
            <div
              class="c18"
              style="flex: 3.8 0 0px; cursor: ew-resize;"
            />
            <div
              class="c15"
              style="flex: 0 0 1px;"
            >
              <div
                aria-label="Upper Bounds"
                aria-valuemax="4.8999999999999995"
                aria-valuemin="2.0999999999999996"
                aria-valuenow="4.8999999999999995"
                class="c16"
                role="slider"
                style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                tabindex="0"
              >
                <div
                  class="c17 EdgeControl__StyledBox-sc-1xo2yt9-0"
                />
              </div>
            </div>
            <div
              class="c14"
              style="flex: 0 0 0px;"
            />
          </div>
          <span
            class="c19"
            style="width: 0px;"
          >
            4.8999999999999995
          </span>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilter options 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c16 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c15:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c15:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus >circle,
.c15:focus >ellipse,
.c15:focus >line,
.c15:focus >path,
.c15:focus >polygon,
.c15:focus >polyline,
.c15:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c15:focus ::-moz-focus-inner {
  border: 0;
}

.c15:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) >circle,
.c15:focus:not(:focus-visible) >ellipse,
.c15:focus:not(:focus-visible) >line,
.c15:focus:not(:focus-visible) >path,
.c15:focus:not(:focus-visible) >polygon,
.c15:focus:not(:focus-visible) >polyline,
.c15:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c15:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c17 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus >circle,
.c17:focus >ellipse,
.c17:focus >line,
.c17:focus >path,
.c17:focus >polygon,
.c17:focus >polyline,
.c17:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c17:focus ::-moz-focus-inner {
  border: 0;
}

.c17:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) >circle,
.c17:focus:not(:focus-visible) >ellipse,
.c17:focus:not(:focus-visible) >line,
.c17:focus:not(:focus-visible) >path,
.c17:focus:not(:focus-visible) >polygon,
.c17:focus:not(:focus-visible) >polyline,
.c17:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c17:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c18 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9 :hover input:not([disabled])+div,
.c9 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11 :checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
              >
                name
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                    label="aa"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      aa
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="bb"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      bb
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="cc"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      cc
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-enabled"
              >
                Enabled
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-enabled"
                  role="group"
                >
                  <label
                    class="c9"
                    label="Enabled"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      Enabled
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="Disabled"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      Disabled
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-type.name"
              >
                Type
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-type.name"
                  role="group"
                >
                  <label
                    class="c9"
                    label="ZZ"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      ZZ
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="YY"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      YY
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c14"
        >
          <button
            class="c15"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c16"
          />
          <button
            aria-hidden="true"
            class="c17 c18"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range Data 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c20 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c17 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c19:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus >circle,
.c19:focus >ellipse,
.c19:focus >line,
.c19:focus >path,
.c19:focus >polygon,
.c19:focus >polyline,
.c19:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus ::-moz-focus-inner {
  border: 0;
}

.c19:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) >circle,
.c19:focus:not(:focus-visible) >ellipse,
.c19:focus:not(:focus-visible) >line,
.c19:focus:not(:focus-visible) >path,
.c19:focus:not(:focus-visible) >polygon,
.c19:focus:not(:focus-visible) >polyline,
.c19:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus >circle,
.c21:focus >ellipse,
.c21:focus >line,
.c21:focus >path,
.c21:focus >polygon,
.c21:focus >polyline,
.c21:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus ::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) >circle,
.c21:focus:not(:focus-visible) >ellipse,
.c21:focus:not(:focus-visible) >line,
.c21:focus:not(:focus-visible) >path,
.c21:focus:not(:focus-visible) >polygon,
.c21:focus:not(:focus-visible) >polyline,
.c21:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c22 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  user-select: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-rating"
              >
                Rating
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8"
                  id="data-rating"
                >
                  <span
                    class="c9"
                    style="width: 0px;"
                  >
                    0
                  </span>
                  <div
                    class="c10 c11"
                    tabindex="-1"
                  >
                    <div
                      class="c12"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c13"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Lower Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="c14"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c15 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c16"
                      style="flex: 6 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c13"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Upper Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="5"
                        class="c14"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c15 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c12"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c17"
                    style="width: 0px;"
                  >
                    5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c18"
        >
          <button
            class="c19"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c20"
          />
          <button
            aria-hidden="true"
            class="c21 c22"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range prop 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c20 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c17 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c19 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c19:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c19:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus >circle,
.c19:focus >ellipse,
.c19:focus >line,
.c19:focus >path,
.c19:focus >polygon,
.c19:focus >polyline,
.c19:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c19:focus ::-moz-focus-inner {
  border: 0;
}

.c19:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) >circle,
.c19:focus:not(:focus-visible) >ellipse,
.c19:focus:not(:focus-visible) >line,
.c19:focus:not(:focus-visible) >path,
.c19:focus:not(:focus-visible) >polygon,
.c19:focus:not(:focus-visible) >polyline,
.c19:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c19:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c21:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus >circle,
.c21:focus >ellipse,
.c21:focus >line,
.c21:focus >path,
.c21:focus >polygon,
.c21:focus >polyline,
.c21:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c21:focus ::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) >circle,
.c21:focus:not(:focus-visible) >ellipse,
.c21:focus:not(:focus-visible) >line,
.c21:focus:not(:focus-visible) >path,
.c21:focus:not(:focus-visible) >polygon,
.c21:focus:not(:focus-visible) >polyline,
.c21:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c22 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  user-select: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c16 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-rating"
              >
                rating
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8"
                  id="data-rating"
                >
                  <span
                    class="c9"
                    style="width: 0px;"
                  >
                    0
                  </span>
                  <div
                    class="c10 c11"
                    tabindex="-1"
                  >
                    <div
                      class="c12"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c13"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Lower Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="c14"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c15 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c16"
                      style="flex: 6 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c13"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Upper Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="5"
                        class="c14"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c15 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c12"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c17"
                    style="width: 0px;"
                  >
                    5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c18"
        >
          <button
            class="c19"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c20"
          />
          <button
            aria-hidden="true"
            class="c21 c22"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(125, 76, 219, 0.4);
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c24 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c13 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c26 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c6 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c15 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
  text-align: right;
}

.c23 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 14px;
  line-height: 20px;
}

.c25 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c25:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c25:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus >circle,
.c25:focus >ellipse,
.c25:focus >line,
.c25:focus >path,
.c25:focus >polygon,
.c25:focus >polyline,
.c25:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c25:focus ::-moz-focus-inner {
  border: 0;
}

.c25:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible) >circle,
.c25:focus:not(:focus-visible) >ellipse,
.c25:focus:not(:focus-visible) >line,
.c25:focus:not(:focus-visible) >path,
.c25:focus:not(:focus-visible) >polygon,
.c25:focus:not(:focus-visible) >polyline,
.c25:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c25:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c27 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  opacity: 0.3;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c27:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c27:focus >circle,
.c27:focus >ellipse,
.c27:focus >line,
.c27:focus >path,
.c27:focus >polygon,
.c27:focus >polyline,
.c27:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c27:focus ::-moz-focus-inner {
  border: 0;
}

.c27:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c27:focus:not(:focus-visible) >circle,
.c27:focus:not(:focus-visible) >ellipse,
.c27:focus:not(:focus-visible) >line,
.c27:focus:not(:focus-visible) >path,
.c27:focus:not(:focus-visible) >polygon,
.c27:focus:not(:focus-visible) >polyline,
.c27:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c27:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c28 {
  opacity: 0;
}

.c2 {
  max-width: 100%;
}

.c9 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c9 :hover input:not([disabled])+div,
.c9 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11 :checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c17 {
  user-select: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c22 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c24 {
    margin-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    height: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c26 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-name"
              >
                name
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c9"
                    label="aa"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      aa
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="bb"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      bb
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="cc"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      cc
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-enabled"
              >
                enabled
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c8 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-enabled"
                  role="group"
                >
                  <label
                    class="c9"
                    label="true"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      true
                    </span>
                  </label>
                  <div
                    class="c13"
                  />
                  <label
                    class="c9"
                    label="false"
                  >
                    <div
                      class="c8 c10"
                    >
                      <input
                        class="c11"
                        type="checkbox"
                      />
                      <div
                        class="c12 "
                      />
                    </div>
                    <span>
                      false
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 "
            >
              <label
                class="c6"
                for="data-rating"
              >
                rating
              </label>
              <div
                class="c7 FormField__FormFieldContentBox-sc-m9hood-1"
              >
                <div
                  class="c14"
                  id="data-rating"
                >
                  <span
                    class="c15"
                    style="width: 0px;"
                  >
                    2.0999999999999996
                  </span>
                  <div
                    class="c16 c17"
                    tabindex="-1"
                  >
                    <div
                      class="c18"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c19"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Lower Bounds"
                        aria-valuemax="4.8999999999999995"
                        aria-valuemin="2.0999999999999996"
                        aria-valuenow="2.0999999999999996"
                        class="c20"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c21 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c22"
                      style="flex: 3.8 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c19"
                      style="flex: 0 0 1px;"
                    >
                      <div
                        aria-label="Upper Bounds"
                        aria-valuemax="4.8999999999999995"
                        aria-valuemin="2.0999999999999996"
                        aria-valuenow="4.8999999999999995"
                        class="c20"
                        role="slider"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="0"
                      >
                        <div
                          class="c21 EdgeControl__StyledBox-sc-1xo2yt9-0"
                        />
                      </div>
                    </div>
                    <div
                      class="c18"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c23"
                    style="width: 0px;"
                  >
                    4.8999999999999995
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c24"
        >
          <button
            class="c25"
            type="submit"
          >
            Apply filters
          </button>
          <div
            class="c26"
          />
          <button
            aria-hidden="true"
            class="c27 c28"
            disabled=""
            tabindex="-1"
            type="reset"
          >
            Undo changes
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter select multiple options 1`] = `
<DocumentFragment>
  .c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: normal;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters, 1 filter applied"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="c7"
              style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
            >
              <div
                class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
                style="min-height: 24px; min-width: 24px;"
              >
                <span
                  class="c9"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c10"
        >
          <button
            class="c11"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilter select multiple options search 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters"
          class="c3"
          id="test-data--filters-control"
          type="button"
        >
          <svg
            aria-label="Filter"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m3 6 7 7v8h4v-8l7-7V3H3z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilter select multiple options search 2`] = `
.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  overflow: auto;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  margin-left: 12px;
  margin-right: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  min-width: auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  min-height: 48px;
  flex: 1 1;
  width: 100%;
  justify-content: space-between;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 6px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding: 6px;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: center;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
}

.c23 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 0px;
  flex: 0 0 auto;
}

.c7 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #FFFFFF;
  color: #444444;
  opacity: 0;
  transform-origin: top right;
  animation: kPQHBD 0.1s forwards;
  animation-delay: 0.01s;
}

.c6 {
  font-size: 14px;
  line-height: 20px;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c8:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus >circle,
.c9:focus >ellipse,
.c9:focus >line,
.c9:focus >path,
.c9:focus >polygon,
.c9:focus >polyline,
.c9:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus ::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) >circle,
.c9:focus:not(:focus-visible) >ellipse,
.c9:focus:not(:focus-visible) >line,
.c9:focus:not(:focus-visible) >path,
.c9:focus:not(:focus-visible) >polygon,
.c9:focus:not(:focus-visible) >polyline,
.c9:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c16:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) >circle,
.c16:focus:not(:focus-visible) >ellipse,
.c16:focus:not(:focus-visible) >line,
.c16:focus:not(:focus-visible) >path,
.c16:focus:not(:focus-visible) >polygon,
.c16:focus:not(:focus-visible) >polyline,
.c16:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c16:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c18 {
  display: flex;
  flex-direction: row;
  user-select: none;
  width: fit-content;
  padding: 6px;
  cursor: pointer;
}

.c18 :hover input:not([disabled])+div,
.c18 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c20 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c20 :checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c19 {
  flex-shrink: 0;
}

.c14 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  font-size: 14px;
  line-height: 20px;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus >circle,
.c14:focus >ellipse,
.c14:focus >line,
.c14:focus >path,
.c14:focus >polygon,
.c14:focus >polyline,
.c14:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus ::-moz-focus-inner {
  border: 0;
}

.c14::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c14::-moz-placeholder {
  color: #AAAAAA;
}

.c14:-ms-input-placeholder {
  color: #AAAAAA;
}

.c14 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c14::-moz-focus-inner {
  border: none;
  outline: none;
}

.c14:-moz-placeholder,
.c14::-moz-placeholder {
  opacity: 1;
}

.c13 {
  position: relative;
  width: 100%;
}

.c3 {
  max-height: inherit;
}

.c15 {
  position: relative;
  scroll-behavior: smooth;
  overflow: auto;
  outline: none;
}

.c17 {
  display: block;
  width: 100%;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-left: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    width: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c1 {
    display: flex;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c3 {
    width: 100%;
  }
}

<div
  class="c0 c1"
  data-g-portal-id="1"
  id="test-data-type.name__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="c2 c3"
    id="test-data-type.name__select-drop"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
        >
          0 selected
        </span>
        <div
          class="c7"
        />
        <button
          aria-label="Select all 10 options"
          class="c8"
          type="button"
        >
          Select All
        </button>
      </div>
      <div
        class="c2"
      >
        <button
          aria-label="Close Select"
          class="c9"
          type="button"
        >
          <div
            class="c10"
          >
            <svg
              aria-label="FormDown"
              class="c11"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c13"
      >
        <input
          aria-label="Search to filter options."
          autocomplete="off"
          class="c14"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="c15"
      role="listbox"
      tabindex="0"
    >
      <button
        aria-label="ZZ not selected"
        aria-posinset="1"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option0"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            ZZ
          </div>
        </label>
      </button>
      <button
        aria-label="YY not selected"
        aria-posinset="2"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option1"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            YY
          </div>
        </label>
      </button>
      <button
        aria-label="aa not selected"
        aria-posinset="3"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option2"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            aa
          </div>
        </label>
      </button>
      <button
        aria-label="bb not selected"
        aria-posinset="4"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option3"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            bb
          </div>
        </label>
      </button>
      <button
        aria-label="cc not selected"
        aria-posinset="5"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option4"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            cc
          </div>
        </label>
      </button>
      <button
        aria-label="dd not selected"
        aria-posinset="6"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option5"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            dd
          </div>
        </label>
      </button>
      <button
        aria-label="ee not selected"
        aria-posinset="7"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option6"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            ee
          </div>
        </label>
      </button>
      <button
        aria-label="ff not selected"
        aria-posinset="8"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option7"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            ff
          </div>
        </label>
      </button>
      <button
        aria-label="gg not selected"
        aria-posinset="9"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option8"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            gg
          </div>
        </label>
      </button>
      <button
        aria-label="hh not selected"
        aria-posinset="10"
        aria-selected="false"
        aria-setsize="10"
        class="c16 c17"
        id="option9"
        role="option"
        tabindex="-1"
        type="button"
      >
        <label
          class="c18"
          label="[object Object]"
        >
          <div
            class="c2 c19"
          >
            <input
              class="c20"
              tabindex="-1"
              type="checkbox"
            />
            <div
              class="c21 "
            />
          </div>
          <div
            class="c22"
          >
            hh
          </div>
        </label>
      </button>
      <div
        class="c23"
      />
    </div>
  </div>
</div>
`;

exports[`DataFilter select multiple options search 3`] = `
"@media only screen and (max-width: 768px) {
  .jcqHbt {
    margin-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .fuemCy {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .fuemCy {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dkkaJX {
    border-radius: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .jHZjVv {
    border-radius: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .rQmrI {
    margin-top: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .eobCJW {
    height: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .gzgMpG {
    width: 6px;
  }
}"
`;

exports[`DataFilter should allow filtering on multiple sub-properties from same parent property 1`] = `
<DocumentFragment>
  .c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 14px;
  line-height: 20px;
  color: #FFFFFF;
  font-weight: normal;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters, 2 filters applied"
          class="c3"
          id="data--filters-control"
          type="button"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="c7"
              style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
            >
              <div
                class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
                style="min-height: 24px; min-width: 24px;"
              >
                <span
                  class="c9"
                >
                  2
                </span>
              </div>
            </div>
          </div>
        </button>
        <div
          class="c10"
        >
          <button
            class="c11"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
